Overlap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,7 @@ body {
   color: #fff;
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 10px;
+  padding: 5px;
   height: 100vh;
   overflow: hidden;
 }
